# CARE-ML

./: .cookiecutter.json  .cruft.json  .gitignore  .gitmodules  README copy.md  README.md  citation.cff  pyproject.toml  requirements.txt  src-requirements.txt  tasks.py
.github/workflows/: pre-commit.yml  static_type_checks.yml  tests.yml
application/: main.py  train_model_from_application_module.py  train_models_in_parallel.py
application/artifacts/: custom_artifacts.py
application/artifacts/plots/: performance_by_n_hba1c.py
application/config/: default_config.yaml
application/config/data/: default_data.yaml
application/config/eval/: default_evaluation.yaml
application/config/model/: logistic-regression.yaml  xgboost.yaml
application/config/preprocessing/: default_preprocessing.yaml
application/config/project/: default_project.yaml
application/modules/: skb_backup.py  specify_features.py  text_feature_models.py
application/modules/loaders/: load_coercion_df_with_prediction_times_and_outcome.py
application/modules/text_feature_models/: load_text_models.py
application/modules/text_models/: fit_and_save_text_models.py  plot_text_models_word_distribution.py  preprocess_sfis.py  preprocess_sfis_pipeline.py
care_ml/cohort_creation/pipelines/: create_cohort.py  create_labels.py
care_ml/model_evaluation/: run_best_model_on_test_set.py
care_ml/model_evaluation/application/pipelines/: examine_flattened_ds.py
care_ml/model_evaluation/application/pipelines/feature_importance/: gain_pipeline.py
care_ml/model_evaluation/application/pipelines/performance/: incidence_by_time_until_outcome.py  mcc_pipeline.py  roc_auc_pipeline.py  sensitivity_by_ppr.py  sensitivity_by_time_to_event.py  sensitivity_pipeline.py
care_ml/model_evaluation/application/pipelines/robustness/: robustness_by_age.py  robustness_by_cyclic_time.py  robustness_by_sex.py  robustness_by_time_from_first_visit.py
care_ml/model_evaluation/dataset_description/: cohort_histograms.py  incidence_by_time.py
care_ml/model_evaluation/figures/feature_importance/shap/: get_shap_values.py  shap_table.py
care_ml/test/test_model_evaluation/: test_coercion_shap_plot.py
src/CARE_ML/cohort_creation/: create_cohort.py  create_labels.py  cut_off_days.py  utils.py
src/CARE_ML/cohort_creation/pipelines/: create_cohort.py  create_labels.py
src/CARE_ML/feature_generation/: main.py
src/CARE_ML/feature_generation/modules/text_model_pipelines/: fit_and_save_text_models.py
src/CARE_ML/model_evaluation/: config.py  run_best_model_on_test_set.py
src/CARE_ML/model_evaluation/application/pipelines/: examine_flattened_ds.py  try_snoozing.py
src/CARE_ML/model_evaluation/dataset_description/: cohort_histograms.py  describe_features.py  incidence_by_time.py  missing_values.py  plot_word_distribution.py  table_one.py
src/CARE_ML/model_evaluation/figures/feature_importance/: gain_plot.py
src/CARE_ML/model_training/application/: train_models_in_parallel.py
src/CARE_ML/preprocessing/: create_cohort.py
src/CARE_ML/test/test_model_evaluation/: test_coercion_feature_name_to_readable.py  test_coercion_get_shap_values.py  test_coercion_shap_plot.py  test_coercion_shap_table.py
src/care_ml/cohort_creation/pipelines/: cut_off_days.py
src/care_ml/feature_generation/: main.py
src/care_ml/feature_generation/modules/text_model_pipelines/: fit_and_save_text_models.py
src/care_ml/model_evaluation/: config.py
src/care_ml/model_evaluation/application/pipelines/: try_snoozing.py
src/care_ml/model_evaluation/dataset_description/: describe_features.py
src/care_ml/model_evaluation/figures/feature_importance/: gain_plot.py
src/psycop_coercion/feature_generation/: main.py
src/psycop_coercion/feature_generation/modules/loaders/: load_coercion_df_with_prediction_times_and_outcome.py
src/psycop_coercion/feature_generation/modules/text_models/: fit_and_save_text_models.py  plot_text_models_word_distribution.py
src/psycop_coercion/model_evaluation/: config.py  run_best_model_on_test_set.py
src/psycop_coercion/model_evaluation/application/pipelines/: examine_flattened_ds.py  run_psycop_eval_class.py  try_snoozing.py
src/psycop_coercion/model_evaluation/data/: load_true_data.py
src/psycop_coercion/model_evaluation/dataset_description/: cohort_histograms.py  describe_features.py  incidence_by_time.py  missing_values.py  plot_word_distribution.py  table_one.py  utils.py
src/psycop_coercion/model_evaluation/dataset_description/table_one/: table_one.py
src/psycop_coercion/model_evaluation/figures/: roc_curve.py
src/psycop_coercion/model_evaluation/figures/feature_importance/: gain_plot.py
src/psycop_coercion/model_evaluation/steps/: get_train_split.py  model_evaluator.py  pipeline_loader.py
src/psycop_coercion/model_training/application/: inspect_dataset.py  train_model_from_application_module.py  train_models_in_parallel.py
src/psycop_coercion/preprocessing/: create_cohort.py  create_labels.py
src/psycop_coercion/test/test_model_evaluation/: test_coercion_feature_name_to_readable.py  test_coercion_get_shap_values.py  test_coercion_shap_plot.py  test_coercion_shap_table.py
src/psycop_coercion/utils/: synth_data.py  tutorial.ipynb
(+45 files in other folders)
